# pyvalues

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: conf.py  development.md  index.rst  pyvalues.rst  pyvalues_baseline_classifier.rst  pyvalues_classifier.rst  pyvalues_dictionary_classifier.rst
main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pyvalues.html  pyvalues_baseline_classifier.html  pyvalues_classifier.html  pyvalues_dictionary_classifier.html  pyvalues_ensemble_classifier.html  pyvalues_evaluation.html  pyvalues_values_writer.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree  pyvalues.doctree  pyvalues_baseline_classifier.doctree  pyvalues_classifier.doctree  pyvalues_dictionary_classifier.doctree  pyvalues_ensemble_classifier.doctree  pyvalues_evaluation.doctree  pyvalues_values_writer.doctree
main/_sources/: pyvalues.rst.txt  pyvalues_baseline_classifier.rst.txt  pyvalues_dictionary_classifier.rst.txt
src/pyvalues/: __init__.py  baseline_classifier.py  baselines.py  classifier.py  classifiers.py  dictionary_classifier.py  document.py  ensemble_classifier.py  evaluation.py  radarplot.py  values.py  values_writer.py
tests/: test_conversions.py  test_dictionary_classifier.py  test_evaluation.py  test_value_classes.py
v0.6.0/: .buildinfo  genindex.html  index.html  py-modindex.html  pyvalues.html  pyvalues_baseline_classifier.html  pyvalues_classifier.html  pyvalues_dictionary_classifier.html  pyvalues_ensemble_classifier.html  pyvalues_values_writer.html  search.html  searchindex.js
v0.6.0/.doctrees/: environment.pickle  index.doctree  pyvalues.doctree  pyvalues_baseline_classifier.doctree  pyvalues_classifier.doctree  pyvalues_ensemble_classifier.doctree  (+2 more)
v0.8.0/: .buildinfo  genindex.html  index.html  py-modindex.html  pyvalues.html  pyvalues_baseline_classifier.html  pyvalues_ensemble_classifier.html  pyvalues_values_writer.html  search.html
v0.8.1/: .buildinfo  genindex.html  index.html  py-modindex.html  pyvalues.html  pyvalues_baseline_classifier.html  pyvalues_dictionary_classifier.html  pyvalues_ensemble_classifier.html  search.html
v0.8.2/: .buildinfo  py-modindex.html  search.html
v0.8.3/: .buildinfo  genindex.html  index.html  objects.inv  pyvalues.html  pyvalues_baseline_classifier.html  pyvalues_classifier.html  pyvalues_ensemble_classifier.html  pyvalues_evaluation.html
(+52 files in other folders)
