[project]
name = "pyvalues"
version = "0.6.0"
description = "Python library for processing, evaluating, and visualizing (Schwartz) human value scores"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic (>=2.12.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pydantic-extra-types (>=2.11.0,<3.0.0)",
    "pycountry (>=26.2.16,<27.0.0)",
]
license = { file = "LICENSE" }
keywords = [ "ai", "artificial intelligence", "classification", "human values", "schwartz values", "vallueeval" ]
authors = [
    {name = "Johannes Kiesel"},
]
maintainers = [
    {name = "Johannes Kiesel",email = "Johannes.Kiesel@gesis.org"}
]

[project.urls]
"Documentation" = "https://valueeval.github.io/pyvalues/main/"
"Source" = "https://github.com/ValueEval/pyvalues"
"Issues" = "https://github.com/ValueEval/pyvalues/issues"

[tool.poetry]
packages = [{include = "pyvalues", from = "src"}]
include = [
    "src/pyvalues/assets/**/*"
]

[tool.poetry.group.development]
optional = true

[tool.poetry.group.development.dependencies]
flake8 = "*"
sphinx = ">=8.0.0,<9.0.0"
sphinx-multiversion = ">=0.2.4"
furo = ">=2024.2.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
